--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -491,6 +491,7 @@ allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
 allow 185.40.4.44;
+allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.42.170.203;
 allow 185.56.171.94;
@@ -594,6 +595,7 @@ allow 194.26.192.177;
 allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.20.19.231;
@@ -920,9 +922,8 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1169,6 +1170,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:10a:2d23::2;
 allow 2a01:4f8:141:3305::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1472,6 +1474,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
+allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
@@ -1513,6 +1516,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1593,7 +1597,6 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1624,6 +1627,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1674,7 +1678,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
@@ -1856,6 +1859,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 88.99.148.243;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
