--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,6 +10,7 @@ allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.251.167.10;
+allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 103.91.65.44;
@@ -594,7 +595,6 @@ allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.20.19.231;
 allow 195.246.231.197;
 allow 195.47.238.176;
 allow 195.47.238.177;
@@ -911,6 +911,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -1177,6 +1178,7 @@ allow 2a01:4f8:141:3305::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
@@ -1232,6 +1234,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1441,7 +1444,6 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:9a40:8860:51::aa11;
-allow 2a0c:b641:3a1:1005::5a;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1593,7 +1595,6 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1622,6 +1623,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1745,6 +1747,7 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
