--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,7 +10,6 @@ allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
 allow 103.251.167.10;
-allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 103.91.65.44;
@@ -237,7 +236,6 @@ allow 179.43.182.58;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.24;
-allow 185.100.87.136;
 allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.192;
@@ -615,7 +613,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.246;
+allow 198.167.206.143;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -919,6 +917,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.3;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1173,7 +1172,6 @@ allow 2a01:4f8:141:3305::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
@@ -1437,6 +1435,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
+allow 2a0c:9a40:8860:51::aa11;
 allow 2a0c:e300:b:b::b;
 allow 2a0d:bbc7::f816:3eff:fe0b:181b;
 allow 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -1533,10 +1532,8 @@ allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:185:241:208:82;
-allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
-allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
@@ -1635,10 +1632,8 @@ allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
-allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
-allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
 allow 45.138.16.239;
@@ -1836,6 +1831,7 @@ allow 84.211.224.201;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 85.93.31.31;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
