--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -344,7 +344,6 @@ deny 2a01:4f8:141:3305::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
-deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
@@ -608,6 +607,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
+deny 2a0c:9a40:8860:51::aa11;
 deny 2a0c:e300:b:b::b;
 deny 2a0d:bbc7::f816:3eff:fe0b:181b;
 deny 2a0d:bbc7::f816:3eff:fe0b:58d3;
@@ -704,10 +704,8 @@ deny 2a12:a800:2:1:185:241:208:206;
 deny 2a12:a800:2:1:185:241:208:71;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:185:241:208:82;
-deny 2a12:a800:2:1:45:138:16:107;
 deny 2a12:a800:2:1:45:138:16:113;
 deny 2a12:a800:2:1:45:138:16:164;
-deny 2a12:a800:2:1:45:138:16:222;
 deny 2a12:a800:2:1:45:138:16:230;
 deny 2a12:a800:2:1:45:138:16:231;
 deny 2a12:a800:2:1:45:138:16:239;
