--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -176,6 +176,8 @@ allow 172.104.243.155;
 allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.105.203.121;
+allow 172.232.209.254;
+allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.234.230.113;
 allow 172.81.131.139;
@@ -554,6 +556,7 @@ allow 192.42.116.24;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.42.116.28;
+allow 192.76.153.253;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.189.100.194;
@@ -603,7 +606,6 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.88;
-allow 195.47.238.89;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
@@ -896,7 +898,6 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -908,7 +909,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -917,7 +917,7 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.3;
-allow 23.191.200.5;
+allow 23.191.200.4;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -925,6 +925,7 @@ allow 23.191.200.9;
 allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
+allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2400:d320:2261:6860::1;
@@ -948,7 +949,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
-allow 2602:2e5::104;
+allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1216,6 +1217,7 @@ allow 2a03:e600:100::68;
 allow 2a03:e600:100::69;
 allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
+allow 2a04:52c0:1000:253::253;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
@@ -1223,6 +1225,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1419,7 +1422,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -1726,6 +1728,7 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1811,7 +1814,6 @@ allow 8.222.227.10;
 allow 82.29.128.145;
 allow 83.147.17.190;
 allow 83.217.9.73;
-allow 83.228.94.69;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
