--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -106,6 +106,7 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
+allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
 allow 2400:d320:2261:6860::1;
@@ -123,7 +124,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
-allow 2602:2e5::104;
+allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -390,6 +391,7 @@ allow 2a03:e600:100::68;
 allow 2a03:e600:100::69;
 allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
+allow 2a04:52c0:1000:253::253;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
@@ -397,6 +399,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -593,7 +596,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
